--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "guid": "0.0.12",
     "lodash-node": "^3.5.0",
-    "node-redis-pubsub": "git://github.com/oliverwoodings/node-redis-pubsub.git",
     "when": "^3.7.2"
+  },
+  "devDependencies": {
+    "json-buffer": "^2.0.11"
   }
 }
