--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
   "dependencies": {
     "guid": "0.0.12",
     "lodash-node": "^3.5.0",
-    "when": "^3.7.2"
+    "when": "^3.7.2",
+    "node-redis-pubsub": "^0.5.0"
   },
   "devDependencies": {
-    "json-buffer": "^2.0.11"
+    "chai": "^2.1.2",
+    "jscs": "^1.11.3",
+    "jshint": "^2.6.3",
+    "json-buffer": "^2.0.11",
+    "mocha": "^2.2.1",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
   }
 }
