--- a/.jshintrc
+++ b/.jshintrc
@@ -34,6 +34,7 @@
     "beforeEach": true,
     "afterEach": true,
     "fetch": true,
-    "Promise": true
+    "Promise": true,
+    "Event": true
   }
 }
